fixes to dispute flow
